<resources>
    <string name="app_name">A Night at the Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="titlehint">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genreHint">Enter genre here</string>
    <string name="year">Year</string>
    <string name="yearHint">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string name="show_list">SHOW LIST</string>
    <string name="insert">INSERT</string>
    <string name="back">BACK</string>
    <string name="movie_id">Movie ID</string>

    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>

    </string-array>
</resources>